--- a/css/style.css
+++ b/css/style.css
@@ -687,6 +687,11 @@ body:not(.wf-control) .bento-item-wide {
   height: 1.375rem;
   margin-right: 1rem;
   margin-top: 0.1rem;
+  color: white;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .checklist.dark li:before {
   background: linear-gradient(0deg, #2C2B32 0%, #2C2B32 100%);
