--- a/scss/style.scss
+++ b/scss/style.scss
@@ -439,6 +439,11 @@ body:not(.wf-control) {
             height: 1.375rem;
             margin-right: 1rem;
             margin-top: 0.1rem;
+            color: white;
+            text-align: center;
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
     }
 
