--- a/scss/style.scss
+++ b/scss/style.scss
@@ -444,6 +444,7 @@ body:not(.wf-control) {
             display: flex;
             justify-content: center;
             align-items: center;
+            font-size: 1rem;
         }
     }
 
