--- a/css/style.css
+++ b/css/style.css
@@ -692,6 +692,7 @@ body:not(.wf-control) .bento-item-wide {
   display: flex;
   justify-content: center;
   align-items: center;
+  font-size: 1rem;
 }
 .checklist.dark li:before {
   background: linear-gradient(0deg, #2C2B32 0%, #2C2B32 100%);
