--- a/scss/style.scss
+++ b/scss/style.scss
@@ -444,7 +444,7 @@ body:not(.wf-control) {
             display: flex;
             justify-content: center;
             align-items: center;
-            font-size: 1rem;
+            font-size: 0.8rem;
         }
     }
 
@@ -715,3 +715,26 @@ html:not(.wf-design-mode) .responsive-tab {
         column-gap: 0;
     }
 }
+
+a {
+    position: relative;
+
+    &:before {
+        content: "";
+        position: absolute;
+        width: 100%;
+        bottom: -8px;
+        left: 0;
+        height: 10px;
+        background-image: url("../assets/underline.svg");
+        background-repeat: no-repeat;
+        transform: scaleX(0);
+        transform-origin: left center;
+        transition: transform 0.2s ease-in;
+    }
+
+    &:hover:before {
+        transform: scaleX(1);
+    }
+}
+
