feat: replace image

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -726,7 +726,7 @@ a {
         bottom: -8px;
         left: 0;
         height: 10px;
-        background-image: url("../assets/underline.svg");
+        background-image: url("https://cdn.prod.website-files.com/6822603442295109788371a4/68c2bc0bc400e9fd6b89f34d_underline.svg");
         background-repeat: no-repeat;
         transform: scaleX(0);
         transform-origin: left center;
