--- a/scss/style.scss
+++ b/scss/style.scss
@@ -33,10 +33,6 @@ body:not(.wf-control) {
 
     > .wrap {
         // 12 columns with a max width of 100px per column, defined in the grid template columns minmax(0, 100px)
-        display: grid;
-        grid-template-columns: repeat(12, minmax(0, 78.88px));
-        justify-content: center;
-        // center the grid
 
         &.wider {
             grid-template-columns: repeat(12, minmax(0, 140px));
@@ -716,7 +712,7 @@ html:not(.wf-design-mode) .responsive-tab {
     }
 }
 
-a {
+p a {
     position: relative;
 
     &:before {
