feat: custom css

--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -5,6 +5,7 @@ $dark-gray: #2C2B32;
 $black: #000000;
 $white: #FFFFFF;
 $light-gray: #D7E2DF;
+$red: rgba(180, 16, 16, 1);
 
 // Bezier curve for transitions
 $bezier: cubic-bezier(0.190, 1.000, 0.220, 1.000);
