--- a/css/accordion-tabs.css
+++ b/css/accordion-tabs.css
@@ -55,6 +55,36 @@
   }
 }
 
+.tabs-regular .tab-link-text--alt {
+  padding-left: 30px;
+  padding-right: 30px;
+  position: relative;
+}
+.tabs-regular .tab-link-text--alt:before {
+  content: "*";
+  position: absolute;
+  top: 50%;
+  left: 0;
+  color: red;
+  font-size: 24px;
+  font-family: "Braden Hill", serif;
+  transform: translateY(-50%);
+}
+.tabs-regular .w-tab-link.w--current .tab-link-text--alt {
+  opacity: 1;
+}
+@media screen and (min-width: 992px) {
+  .tabs-regular .w-tab-link.w--current::after {
+    content: "";
+    background-image: linear-gradient(90deg, rgb(180, 16, 16) 0%, rgba(180, 16, 16, 0.2) 100%);
+    position: absolute;
+    height: 4px;
+    width: 100%;
+    top: 100%;
+    left: 0;
+  }
+}
+
 .tabs-image .w-tab-link.w--current .tab-link-text, .tabs-image .w-tab-link.w--current .tab-link-content {
   opacity: 1;
 }
