--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,36 @@
   }
 }
 
+.tabs-regular .tab-link-text--alt {
+  padding-left: 30px;
+  padding-right: 30px;
+  position: relative;
+}
+.tabs-regular .tab-link-text--alt:before {
+  content: "*";
+  position: absolute;
+  top: 50%;
+  left: 0;
+  color: red;
+  font-size: 24px;
+  font-family: "Braden Hill", serif;
+  transform: translateY(-50%);
+}
+.tabs-regular .w-tab-link.w--current .tab-link-text--alt {
+  opacity: 1;
+}
+@media screen and (min-width: 992px) {
+  .tabs-regular .w-tab-link.w--current::after {
+    content: "";
+    background-image: linear-gradient(90deg, rgb(180, 16, 16) 0%, rgba(180, 16, 16, 0.2) 100%);
+    position: absolute;
+    height: 4px;
+    width: 100%;
+    top: 100%;
+    left: 0;
+  }
+}
+
 .tabs-image .w-tab-link.w--current .tab-link-text, .tabs-image .w-tab-link.w--current .tab-link-content {
   opacity: 1;
 }
@@ -384,17 +414,6 @@ body:not(.wf-control) > *:not(.reset-forms) form:not(.remove-styles) .css-checkb
 }
 body:not(.wf-control) > .wrap.wider {
   grid-template-columns: repeat(12, minmax(0, 140px));
-}
-body:not(.wf-control) .button-good {
-  position: relative;
-  background: transparent;
-  color: black;
-  padding: 0.5em 1em;
-  font-size: 1rem;
-  border: none;
-  border-radius: 999px;
-  cursor: pointer;
-  z-index: 0;
 }
 body:not(.wf-control) .button::before {
   content: "";
