--- a/scss/accordion-tabs.scss
+++ b/scss/accordion-tabs.scss
@@ -68,6 +68,43 @@
 	}
 }
 
+.tabs-regular {
+	.tab-link-text--alt {
+		padding-left: 30px;
+		padding-right: 30px;
+		position: relative;
+
+		&:before { 
+			content: "*";
+			position: absolute;
+			top: 50%;
+			left: 0;
+			color: red;
+			font-size: 24px;
+			font-family: "Braden Hill", serif;
+			transform: translateY(-50%);
+		}
+	}
+
+	.w-tab-link.w--current {
+		.tab-link-text--alt {
+			opacity: 1;
+		}
+
+		@media screen and (min-width: 992px) {
+			&::after {
+				content: "";
+				background-image: linear-gradient(90deg, rgba(180, 16, 16, 1) 0%, rgba(180, 16, 16, 0.2) 100%);
+				position: absolute;
+				height: 4px;
+				width: 100%;
+				top: 100%;
+				left: 0;
+			}
+		}
+	}
+}
+
 // Image variant
 .tabs-image {
 	.w-tab-link.w--current {
