--- a/scss/accordion-tabs.scss
+++ b/scss/accordion-tabs.scss
@@ -80,7 +80,7 @@
 			color: $red;
 			font-size: 24px;
 			font-family: "Braden Hill", serif;
-			transform: translateY(-50%);
+			transform: translateY(-50%) translateY(4px);
 		}
 	}
 
