--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,16 @@
   }
 }
 @media screen and (max-width: 991px) {
+  .w-tabs .w-tab-link, .w-tabs .tab-content--alt {
+    padding: 0;
+    border-radius: 0;
+    box-shadow: none;
+  }
+  .w-tabs .w-tab-link.w--current, .w-tabs .tab-content--alt.w--current {
+    background-color: none;
+  }
+}
+@media screen and (max-width: 991px) {
   .w-tabs .w-tab-link {
     padding: 0.875rem 2.25rem;
     background-color: transparent;
@@ -129,6 +139,11 @@
 [data-wf--tabs--variant=tabs-accordion][dark-mode] .tab-content, #accordion-tab[dark-mode] .tab-content {
   background-color: rgba(255, 255, 255, 0.1);
   box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.05), 0 1px 4px 0 rgba(0, 0, 0, 0.1);
+}
+[data-wf--tabs--variant=tabs-accordion][dark-mode] .tab-content--alt, #accordion-tab[dark-mode] .tab-content--alt {
+  background: none;
+  box-shadow: none;
+  padding: 0;
 }
 @media screen and (min-width: 992px) {
   [data-wf--tabs--variant=tabs-accordion] .w-tabs, #accordion-tab .w-tabs {
