--- a/scss/accordion-tabs.scss
+++ b/scss/accordion-tabs.scss
@@ -37,6 +37,18 @@
 		}
 	}
 
+	.w-tab-link, .tab-content--alt {
+		@media screen and (max-width: 991px) {
+			padding: 0;
+			border-radius: 0;
+			box-shadow: none;
+			
+			&.w--current {
+				background-color: none;
+			}
+		}
+	}
+
 	.w-tab-link {
 		@media screen and (max-width: 991px) {
 			padding: 0.875rem 2.25rem;
@@ -159,6 +171,12 @@
 		.tab-content {
 			background-color: rgba($white, 0.1);
 			box-shadow: 0 1px 4px 0 rgba($black, 0.05), 0 1px 4px 0 rgba($black, 0.1);
+		}
+
+		.tab-content--alt {
+			background: none;
+			box-shadow: none;
+			padding: 0;
 		}
 	}
 
